k8s/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalify-backend
  labels:
    app: signalify-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalify-backend
  template:
    metadata:
      labels:
        app: signalify-backend
    spec:
      containers:
        - name: signalify-backend
          image: bhajian/signalify-backend:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: signalify-backend
spec:
  selector:
    app: signalify-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: signalify-backend
spec:
  to:
    kind: Service
    name: signalify-backend
  port:
    targetPort: 3001
  tls:
    termination: edge
